--- a/memopill/android/app/src/main/AndroidManifest.xml
+++ b/memopill/android/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
             
             <meta-data
               android:name="io.flutter.embedding.android.NormalTheme"
-              android:resource="your theme"
+              android:resource="@style/NormalTheme"
               />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
