--- a/memopill/pubspec.yaml
+++ b/memopill/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.5
   flutter_local_notifications: ^17.1.2
+  alarm: ^3.0.0  # Adicionado
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +61,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/alarm.mp3
 
   # To add assets to your application, add an assets section, like this:
   # assets:
